--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -88,9 +88,11 @@
     min-height: 100vh;
     padding: 100px 0 80px;
     justify-content: flex-end;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
+    background-attachment: scroll;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: #000;
   }
 
   .hero::before {
