--- a/src/components/VideoSection.css
+++ b/src/components/VideoSection.css
@@ -197,6 +197,15 @@
   background: #000;
 }
 
+.youtube-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
 .video-loading {
   position: absolute;
   inset: 0;
