--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,14 +1,16 @@
 .hero {
-  min-height: 70vh;
-  height: 70vh;
+  min-height: 90vh;
+  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   background-image: url('../assets/hero.jpg');
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-attachment: fixed;
-  padding: 80px 0 60px;
+  background-repeat: no-repeat;
+  background-color: #000;
+  padding: 100px 0 80px;
   position: relative;
   margin-top: 0;
   overflow: hidden;
@@ -72,9 +74,11 @@
 
 @media (max-width: 1024px) {
   .hero {
-    min-height: 65vh;
-    height: 65vh;
-    padding: 70px 0 50px;
+    min-height: 75vh;
+    height: 75vh;
+    padding: 80px 0 60px;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 
   .hero-content {
