--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -114,7 +114,7 @@
     align-items: flex-start;
     background-image: url('../assets/hero.jpg');
     background-attachment: scroll;
-    background-size: contain;
+    background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
     background-color: #000;
